--- a/src/StackExchange.Redis.Analyzer/StackExchange.Redis.Analyzer/StackExchange.Redis.Analyzer.csproj
+++ b/src/StackExchange.Redis.Analyzer/StackExchange.Redis.Analyzer/StackExchange.Redis.Analyzer.csproj
@@ -19,7 +19,7 @@
     <Copyright></Copyright>
     <PackageTags>StackExchange.Redis.Analyzer, analyzers</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
-    <Version>0.0.1</Version>
+    <Version>0.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <None Update="tools\*.ps1" CopyToOutputDirectory="Always" Pack="true" PackagePath="" />
+    <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
   </ItemGroup>
 
 </Project>
