--- a/src/StackExchange.Redis.Analyzer/StackExchange.Redis.Analyzer.Test/StackExchange.Redis.Analyzer.Test.csproj
+++ b/src/StackExchange.Redis.Analyzer/StackExchange.Redis.Analyzer.Test/StackExchange.Redis.Analyzer.Test.csproj
@@ -1,27 +1,27 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.0;net461</TargetFrameworks>
+    <TargetFrameworks>netcoreapp2.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="TestData\AwaitStringGetAsyncTestData.cs" />
-    <Compile Remove="TestData\ContinueWithCallbackTestData.cs" />
-    <Compile Remove="TestData\ResultStringGetAsyncTestData.cs" />
-    <Compile Remove="TestData\TaskWaitAllStringGetAsyncTestData.cs" />
-    <Compile Remove="TestData\WaitStringGetAsyncTestData.cs" />
+    <Compile Remove="TestData\TransactionDeadlockAnalyzer\AwaitStringGetAsyncTestData.cs" />
+    <Compile Remove="TestData\TransactionDeadlockAnalyzer\ContinueWithCallbackTestData.cs" />
+    <Compile Remove="TestData\TransactionDeadlockAnalyzer\ResultStringGetAsyncTestData.cs" />
+    <Compile Remove="TestData\TransactionDeadlockAnalyzer\TaskWaitAllStringGetAsyncTestData.cs" />
+    <Compile Remove="TestData\TransactionDeadlockAnalyzer\WaitStringGetAsyncTestData.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="TestData\AwaitStringGetAsyncTestData.cs" />
-    <EmbeddedResource Include="TestData\ContinueWithCallbackTestData.cs" />
-    <EmbeddedResource Include="TestData\TaskWaitAllStringGetAsyncTestData.cs" />
-    <EmbeddedResource Include="TestData\WaitStringGetAsyncTestData.cs" />
-    <EmbeddedResource Include="TestData\ResultStringGetAsyncTestData.cs" />
+    <EmbeddedResource Include="TestData\TransactionDeadlockAnalyzer\AwaitStringGetAsyncTestData.cs" />
+    <EmbeddedResource Include="TestData\TransactionDeadlockAnalyzer\ContinueWithCallbackTestData.cs" />
+    <EmbeddedResource Include="TestData\TransactionDeadlockAnalyzer\TaskWaitAllStringGetAsyncTestData.cs" />
+    <EmbeddedResource Include="TestData\TransactionDeadlockAnalyzer\WaitStringGetAsyncTestData.cs" />
+    <EmbeddedResource Include="TestData\TransactionDeadlockAnalyzer\ResultStringGetAsyncTestData.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.msbuild" Version="2.4.0">
+    <PackageReference Include="coverlet.msbuild" Version="2.7.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
@@ -30,9 +30,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="2.8.2" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
-    <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.1.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.0.519" />
   </ItemGroup>
 
