--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ image: Visual Studio 2022
 install:
   - dotnet tool install -g Cake.Tool --version 3.0.0
 build_script:
-- cmd: dotnet cake -Target=CI
+- cmd: dotnet cake --Target=CI
 test: off
 cache:
   - '%USERPROFILE%\.sonar\cache'
