--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,10 @@
 version: 1.0.{build}
 image: Visual Studio 2022
 install:
+  - SET JAVA_HOME=C:\Program Files\Java\jdk17
+  - SET PATH=%JAVA_HOME%\bin;%PATH%
   - dotnet tool install -g Cake.Tool --version 3.0.0
+
 build_script:
 - cmd: dotnet cake --Target=CI
 test: off
