--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,12 @@
 version: 1.0.{build}
-image: Visual Studio 2017
+image: Visual Studio 2022
 install:
-  - dotnet tool install -g Cake.Tool --version 0.33.0 
+  - SET JAVA_HOME=C:\Program Files\Java\jdk17
+  - SET PATH=%JAVA_HOME%\bin;%PATH%
+  - dotnet tool install -g Cake.Tool --version 3.0.0
+
 build_script:
-- cmd: dotnet cake -Target=CI
+- cmd: dotnet cake --Target=CI
 test: off
 cache:
   - '%USERPROFILE%\.sonar\cache'
