--- a/src/StackExchange.Redis.Analyzer/StackExchange.Redis.Analyzer/StackExchange.Redis.Analyzer.csproj
+++ b/src/StackExchange.Redis.Analyzer/StackExchange.Redis.Analyzer/StackExchange.Redis.Analyzer.csproj
@@ -10,7 +10,7 @@
   <PropertyGroup>
     <PackageId>StackExchange.Redis.Analyzer</PackageId>
     <Authors>Oleg Shevchenko</Authors>
-    <PackageLicenseUrl>https://github.com/olsh/stack-exchange-redis-analyzer/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/olsh/stack-exchange-redis-analyzer</PackageProjectUrl>
     <RepositoryUrl>https://github.com/olsh/stack-exchange-redis-analyzer</RepositoryUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -18,7 +18,7 @@
     <PackageReleaseNotes>https://github.com/olsh/stack-exchange-redis-analyzer/releases</PackageReleaseNotes>
     <PackageTags>stackexchange, redis, analyzers</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
-    <Version>1.3.2</Version>
+    <Version>1.3.3</Version>
   </PropertyGroup>
 
   <ItemGroup>
